# ai-experiments-starter

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
.github/instructions/: ai-experiments-codebase.instructions.md
src/: cli.py
src/app/: __init__.py  cli.py  cli_eval.py  runtime.py
src/app/clients/: llm_client.py
src/app/domain/: models.py
src/app/experiments/: definitions.py  loader.py  runner.py
src/app/infrastructure/: artifacts.py  cost.py  dataset_loader.py  fs.py  logging.py
src/app/infrastructure/llm/: adapters.py  client.py  schema_transform.py
src/app/infrastructure/templating/: engine.py
src/app/pipelines/: evaluate_run.py  run_batch.py
src/app/schemas/: extraction.py  recommendation.py
src/app/services/: analytics.py  deps.py  execution.py  global_analytics.py  prompt_builder.py  resolver.py  runner.py  spec_loader.py  variable_analysis.py
src/app/tools/: clean.py
src/app/utils/: dataset.py  io.py  logging.py  pipeline.py  schema.py  selection.py
src/configs/: default.yaml
src/datasets/: samples.jsonl
src/experiments/: __init__.py
src/experiments/acq_yaml/: __init__.py  experiment.yaml
src/experiments/acq_yaml/prompts/instructions/: guidelines.txt
src/experiments/acq_yaml/prompts/system/: extraction.txt
src/experiments/acq_yaml/prompts/user/: extraction.jinja
src/experiments/acq_yaml/schemas/: extraction.py
src/experiments/context/schemas/: models.py
src/experiments/investor_followup/: __init__.py  experiment.yaml
src/experiments/investor_followup/prompts/system/: investor.txt
src/experiments/investor_followup/prompts/user/: investor_followup.jinja
src/experiments/investor_followup/transforms/: __init__.py  investor_transform.py
src/experiments/python_extraction/: __init__.py  experiment.py
